Code cleanup and source code format